--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,51 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: sanHan's Bizarre AI
+description: Lesson 5
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://Sangdo-Han.github.io/sanhan
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+search_enable: true
+search:
+    heading_level: 5
+    previews: 5
+    preview_words_after : 3
+    rel_url: true
+    button: false
+enable_copy_code_button: true
+mermaid :
+    version: "9.1.6"
+
+heading_anchors: true
+
+aux_links_new_tab: false
+
+nav_sort: case_sensitive
+nav_external_links:
+    - title: GitHub
+      url : https://github.com/Sangdo-Han
+
+back_to_top : true
+back_to_top_text: "Back to top"
+last_edit_timestamp: true 
+last_edit_time_format: "%b %e %Y at %I:%M %p"
+
+color_scheme: light
+
+callouts_level: loud # or loud / quiet
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: purple
+  warning:
+    title: Warning
+    color: red
+# aux_links:
+#   Template Repository: https://github.com/just-the-docs/just-the-docs-template
