[CI-CD] fix remote configuration just-the-docs

--- a/_config_local.yml
+++ b/_config_local.yml
@@ -1,6 +1,6 @@
 title: sanHan's Bizarre AI
 description: Lesson 5
-remote_theme: pmarsceill/just-the-docs
+theme: just-the-docs
 
 url: https://Sangdo-Han.github.io/sanhan
 
