[HOTFIX] rendering sass

--- a/_config.yml
+++ b/_config.yml
@@ -48,5 +48,8 @@ callouts:
   warning:
     title: Warning
     color: red
+
+load_paths:
+   - _sass
 # aux_links:
 #   Template Repository: https://github.com/just-the-docs/just-the-docs-template
