[feat] change layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: sanHan's Bizarre AI
+title: sanhan research
 description: Lesson 5
 theme: just-the-docs
 
 url: https://Sangdo-Han.github.io/sanhan
-favicon_icon: "/assets/images/favicon.ico"
+favicon_icon: "https://Sangdo-Han.github.io/sanhan/assets/images/favicon.ico"
 search_enable: true
 search:
     heading_level: 5
