--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: sanhan research
 description: Lesson 5
 theme: just-the-docs
 
-url: https://Sangdo-Han.github.io/sanhan
-favicon_icon: "https://Sangdo-Han.github.io/sanhan/assets/images/favicon.ico"
+url: https://Sangdo-Han.github.io/
+favicon_icon: "https://Sangdo-Han.github.io/assets/images/favicon.ico"
 search_enable: true
 search:
     heading_level: 5
