--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ callouts:
   warning:
     title: Warning
     color: red
+google_site_verification: "bClxIYYv0y9tx5Oh2KvaE-2nlzvQtgac0kCkqgUaqEQ"
 # aux_links:
 #   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
