--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: sanhan research
 description: Lesson 5
-theme: just-the-docs
-
+# theme: just-the-docs
+remote_theme: just-the-docs
 url: https://Sangdo-Han.github.io/
 favicon_icon: "https://Sangdo-Han.github.io/assets/images/favicon.ico"
 search_enable: true
